# fiado

./: .gitignore  Cargo.toml  Makefile
.local/: .env-example  docker-compose.yml  otel-collector-config.yml  pipelines.yaml
migrations/: 20240302200844_user.sql
src/: lib.rs  main.rs
src/app/: container.rs  env.rs  error.rs  mod.rs
src/app/http/: error.rs  mod.rs
src/app/http/middlewares/: admin.rs  mod.rs  otlp.rs
src/app/http/user/: handler.rs  route.rs
src/data/: mod.rs
src/data/protocols/: uuid.rs
src/data/usecases/admin/: mod.rs  tests.rs
src/data/usecases/user/: mod.rs  tests.rs
src/data/usecases/user/protocols/: hash.rs  mod.rs  repository.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/error/: mod.rs
src/domain/types/: mod.rs
src/domain/types/birth_date/: mod.rs  tests.rs
src/domain/types/cpf/: mod.rs  tests.rs
src/domain/usecases/: admin.rs  user.rs
src/infrastructure/: mod.rs
src/infrastructure/hash/: mod.rs  tests.rs
src/infrastructure/logger/: mod.rs
src/infrastructure/tracer/: mod.rs
src/infrastructure/user/: mod.rs
src/infrastructure/uuid/: mod.rs
