[package]
name = "fiadors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
chrono = { version = "0.4.31", features = ["std", "serde"] }
mockall = "0.11.4"
serde = { version = "1.0.190", features = ["std", "derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5.0", features = ["std", "serde"] }
