[package]
name = "fiadors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["std", "serde"] }
mockall = "0.11.4"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
rand = "0.8.5"
serde = { version = "1.0.190", features = ["std", "derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5.0", features = ["std", "serde", "v4"] }
