[package]
name = "fiadors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.7.4"
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["std", "serde"] }
jsonwebtoken = "9.2.0"
mockall = "0.11.4"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["std", "derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "runtime-tokio", "uuid"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.5.0", features = ["std", "serde", "v4"] }
